@@ -95,136 +95,144 @@
         android:valueTo="3"
         android:stepSize="1" />
 
-      <TextView
-        style="@style/Widget.Doodle.TextView.Category"
-        android:text="@string/parallax_category_tilt" />
-
       <LinearLayout
-        android:id="@+id/linear_parallax_tilt"
-        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">
+        android:id="@+id/linear_parallax_tilt_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <ImageView
-          android:id="@+id/image_parallax_tilt"
-          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_all_directions_anim"
-          tools:ignore="ContentDescription" />
+        <TextView
+          style="@style/Widget.Doodle.TextView.Category"
+          android:text="@string/parallax_category_tilt" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
+        <LinearLayout
+          android:id="@+id/linear_parallax_tilt"
+          style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine.Clickable">
 
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Title"
-            android:text="@string/parallax_tilt" />
+          <ImageView
+            android:id="@+id/image_parallax_tilt"
+            style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_all_directions_anim"
+            tools:ignore="ContentDescription" />
 
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Description"
-            android:text="@string/parallax_tilt_description" />
+          <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Title"
+              android:text="@string/parallax_tilt" />
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Description"
+              android:text="@string/parallax_tilt_description" />
+
+          </LinearLayout>
+
+          <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/switch_parallax_tilt"
+            style="@style/Widget.Doodle.Switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp" />
 
         </LinearLayout>
 
-        <com.google.android.material.switchmaterial.SwitchMaterial
-          android:id="@+id/switch_parallax_tilt"
-          style="@style/Widget.Doodle.Switch"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp" />
+        <LinearLayout
+          android:id="@+id/linear_parallax_refresh_rate"
+          style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
+          android:paddingBottom="0dp">
 
-      </LinearLayout>
+          <ImageView
+            android:id="@+id/image_parallax_refresh_rate"
+            style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_refresh_anim"
+            tools:ignore="ContentDescription" />
 
-      <LinearLayout
-        android:id="@+id/linear_parallax_refresh_rate"
-        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
-        android:paddingBottom="0dp">
+          <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
 
-        <ImageView
-          android:id="@+id/image_parallax_refresh_rate"
-          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_refresh_anim"
-          tools:ignore="ContentDescription" />
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Title"
+              android:text="@string/parallax_refresh_rate" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Description"
+              android:text="@string/parallax_refresh_rate_description" />
 
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Title"
-            android:text="@string/parallax_refresh_rate" />
-
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Description"
-            android:text="@string/parallax_refresh_rate_description" />
+          </LinearLayout>
 
         </LinearLayout>
 
-      </LinearLayout>
+        <com.google.android.material.slider.Slider
+          android:id="@+id/slider_parallax_refresh_rate"
+          style="@style/Widget.Doodle.Slider"
+          android:valueFrom="20000"
+          android:valueTo="65000"
+          android:stepSize="5000" />
 
-      <com.google.android.material.slider.Slider
-        android:id="@+id/slider_parallax_refresh_rate"
-        style="@style/Widget.Doodle.Slider"
-        android:valueFrom="20000"
-        android:valueTo="65000"
-        android:stepSize="5000" />
+        <LinearLayout
+          android:id="@+id/linear_parallax_damping"
+          style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
+          android:paddingBottom="0dp">
 
-      <LinearLayout
-        android:id="@+id/linear_parallax_damping"
-        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
-        android:paddingBottom="0dp">
+          <ImageView
+            android:id="@+id/image_parallax_damping"
+            style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_vibration_anim"
+            tools:ignore="ContentDescription" />
 
-        <ImageView
-          android:id="@+id/image_parallax_damping"
-          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_vibration_anim"
-          tools:ignore="ContentDescription" />
+          <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Title"
+              android:text="@string/parallax_damping" />
 
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Title"
-            android:text="@string/parallax_damping" />
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Description"
+              android:text="@string/parallax_damping_description" />
 
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Description"
-            android:text="@string/parallax_damping_description" />
-
-        </LinearLayout>
-
-      </LinearLayout>
-
-      <com.google.android.material.slider.Slider
-        android:id="@+id/slider_parallax_damping"
-        style="@style/Widget.Doodle.Slider"
-        android:valueFrom="1"
-        android:valueTo="20"
-        android:stepSize="1" />
-
-      <LinearLayout
-        android:id="@+id/linear_parallax_threshold"
-        style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
-        android:paddingBottom="0dp">
-
-        <ImageView
-          android:id="@+id/image_parallax_threshold"
-          style="@style/Widget.Doodle.ImageView.ListItem.Icon"
-          android:src="@drawable/ic_round_filter_alt_anim"
-          tools:ignore="ContentDescription" />
-
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
-
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Title"
-            android:text="@string/parallax_threshold" />
-
-          <TextView
-            style="@style/Widget.Doodle.TextView.ListItem.Description"
-            android:text="@string/parallax_threshold_description" />
+          </LinearLayout>
 
         </LinearLayout>
 
-      </LinearLayout>
+        <com.google.android.material.slider.Slider
+          android:id="@+id/slider_parallax_damping"
+          style="@style/Widget.Doodle.Slider"
+          android:valueFrom="1"
+          android:valueTo="20"
+          android:stepSize="1" />
 
-      <com.google.android.material.slider.Slider
-        android:id="@+id/slider_parallax_threshold"
-        style="@style/Widget.Doodle.Slider"
-        android:valueFrom="1"
-        android:valueTo="10"
-        android:stepSize="1" />
+        <LinearLayout
+          android:id="@+id/linear_parallax_threshold"
+          style="@style/Widget.Doodle.LinearLayout.ListItem.TwoLine"
+          android:paddingBottom="0dp">
+
+          <ImageView
+            android:id="@+id/image_parallax_threshold"
+            style="@style/Widget.Doodle.ImageView.ListItem.Icon"
+            android:src="@drawable/ic_round_filter_alt_anim"
+            tools:ignore="ContentDescription" />
+
+          <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Title"
+              android:text="@string/parallax_threshold" />
+
+            <TextView
+              style="@style/Widget.Doodle.TextView.ListItem.Description"
+              android:text="@string/parallax_threshold_description" />
+
+          </LinearLayout>
+
+        </LinearLayout>
+
+        <com.google.android.material.slider.Slider
+          android:id="@+id/slider_parallax_threshold"
+          style="@style/Widget.Doodle.Slider"
+          android:valueFrom="1"
+          android:valueTo="10"
+          android:stepSize="1" />
+
+      </LinearLayout>
 
     </LinearLayout>
 
